# fm

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
config/: fm.yaml  lr.yaml
config/criteo/: lr.yaml
config/criteo_kaggle/: lr.yaml
src/: train_torch.py
src/data/: base.py  criteo.py  criteo_kaggle.py
src/libs/: hashing.py  logger.py  parse_args.py  preprocess_utils.py
src/model/torch/: fm.py  lr.py
src/prepare_model_data/: torch.py
src/preprocess/: base.py  criteo.py  criteo_kaggle.py  preprocessor.py
tests/: conftest.py  test_train_torch.py
