[tool.poetry]
name = "fm"
version = "0.1.0"
description = ""
authors = ["bohyun-shin <shinbo0613@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.6.0"
torch = "2.5.1"
numpy = "2.1.3"
pandas = "2.2.3"
easydict = "^1.13"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-cov = "6.0.0"
ruff = "0.9.9"
pre-commit = "4.0.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
